--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -9,7 +9,7 @@
 
 .hero {
   position: relative;
-  padding: 32px 32px 0px 0px;
+  padding: 5px 32px 0px 0px;
 }
 
 .hero h1 {
@@ -35,6 +35,7 @@
 }
 
 .hero > div > div h1 {
+  margin-top: 40px;
   font-size: 50px;
   line-height: 1.2;
   font-weight: 600;
@@ -52,5 +53,6 @@
   grid-template-rows: repeat(2, 1fr);
   grid-template-columns: repeat(2, 1fr);
   margin: 0;
-  gap: 1rem;
+  gap: 1.5rem;
+  width: 90%;
 }
