--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,6 +44,7 @@ body {
   overflow-x: hidden;
   font-family: var(--body-font-family);
   background: var(--background);
+  
 }
 
 main {
@@ -52,7 +53,7 @@ main {
 
 main .section {
   width: 69%;
-  padding: 100px 0 100px 0;
+  padding:0 0 80px 0;
 }
 
 h2 {
@@ -60,6 +61,7 @@ h2 {
   font-weight: 600;
   text-align: center;
   color: black;
+  margin-bottom: 20px;
 }
 
 h1 > em,
